--- a/index.html
+++ b/index.html
@@ -74,16 +74,28 @@
         consequat.</p>
     </div>
     <div class="our-dev">
-      <ul class="team-photo__list">
-        <li class="team-photo__list-item"><img src="./img/Matt.jpg" alt="Matthew" width="380" height="470"
-            class="photo-dev"></li>
-        <li class="team-photo__list-item"><img src="./img/Cris.jpg" alt="Christopher" width="380" height="470"
-            class="photo-dev"></li>
-        <li class="team-photo__list-item"><img src="./img/Michael.jpg" alt=" Fertig" width="380" height="470"
-            class="photo-dev"></li>
-      </ul>
-    </div>
-
+      <figure class="team-image">
+        <img src="./img/Matt.jpg" width="380" height="470" alt="Matt" class="card-dev" />
+        <figcaption class="card-bg">
+          <p class="name-dev">Matthew Dix</p>
+          <p class="position-dev">Graphic Design</p>
+        </figcaption>
+      </figure>
+      <figure class="team-image">
+        <img src="./img/Cris.jpg" width="380" height="470" alt="Cris" class="card-dev" />
+        <figcaption class="card-bg">
+          <p class="name-dev">Matthew Dix</p>
+          <p class="position-dev">Graphic Design</p>
+        </figcaption>
+      </figure>
+      <figure class="team-image">
+        <img src="./img/Michael.jpg" width="380" height="470" alt="Michael" class="card-dev" />
+        <figcaption class="card-bg">
+          <p class="name-dev">Matthew Dix</p>
+          <p class="position-dev">Graphic Design</p>
+        </figcaption>
+      </figure>
+    </div>>
   </section>
   <footer></footer>
   </div>
