--- a/index.html
+++ b/index.html
@@ -73,29 +73,41 @@
         aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat.</p>
     </div>
-    <div class="our-dev">
-      <figure class="team-image">
-        <img src="./img/Matt.jpg" width="380" height="470" alt="Matt" class="card-dev" />
-        <figcaption class="card-bg">
-          <p class="name-dev">Matthew Dix</p>
-          <p class="position-dev">Graphic Design</p>
-        </figcaption>
-      </figure>
-      <figure class="team-image">
+    <div>
+      <ul class="our-dev">
+      <!-- csrd1__________________________________ -->
+      <li class="team-image">
+        <!-- overlay___________________________ -->
+        <div class="overlay">
+          <ul class="overlay-list">
+            <li class="overlay-list__item"><a href="#" class="icon-list facebook"></a><span class="visually-hidden">facebook</span></li>
+            <li class="overlay-list__item"><a href="#" class="icon-list twitter"></a><span class="visually-hidden">twitter</span></li>
+            <li class="overlay-list__item"><a href="#" class="icon-list pinterest"></a><span class="visually-hidden">pinterest</span></li>
+            <li class="overlay-list__item"><a href="#" class="icon-list instagram"></a><span class="visually-hidden">instagram</span></li>
+          </ul>
+        </div>
+        <!-- overlay___________________________ -->
+        <img src="./img/Matt.jpg" width="380" height="70" alt="Matt" class="card-dev" />
+        <p class="name-dev">Matthew Dix</p>
+        <p class="position-dev">Graphic Design</p> 
+      </li>
+
+
+      <!-- card 2++++++++++++++++++++++++++++++++++++++++++++++ -->
+      <li class="team-image">
         <img src="./img/Cris.jpg" width="380" height="470" alt="Cris" class="card-dev" />
-        <figcaption class="card-bg">
           <p class="name-dev">Matthew Dix</p>
           <p class="position-dev">Graphic Design</p>
-        </figcaption>
-      </figure>
-      <figure class="team-image">
+      </li>
+
+      <!-- card3_____________________________________________________- -->
+        <li class="team-image">
         <img src="./img/Michael.jpg" width="380" height="470" alt="Michael" class="card-dev" />
-        <figcaption class="card-bg">
           <p class="name-dev">Matthew Dix</p>
           <p class="position-dev">Graphic Design</p>
-        </figcaption>
-      </figure>
-    </div>>
+        </li>
+      </ul>
+    </div>
   </section>
   <footer></footer>
   </div>
