--- a/index.html
+++ b/index.html
@@ -25,91 +25,141 @@
     </nav>
   </header>
   <!-- header---------------------------------------- -->
-  <section class="section-service container">
-    <div class="servise-title-wrapp">
-      <h2 class="title-servise"><span class="subtitle-service">We work with</span>Amazing Services</h2>
-    </div>
-    <ul class="servises__list">
-      <li class="servises__list-item photography">
-        <h3 class="servises__list-item-title">Photography</h3>
-        <p class="servises__list-item-descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-          tempor.</p>
-      </li>
-      <li class="servises__list-item web-design">
-        <h3 class="servises__list-item-title">Web Design</h3>
-        <p class="servises__list-item-descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-          tempor.</p>
-      </li>
-      <li class="servises__list-item creativity">
-        <h3 class="servises__list-item-title">Creativity</h3>
-        <p class="servises__list-item-descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-          tempor.</p>
-      </li>
-      <li class="servises__list-item seo">
-        <h3 class="servises__list-item-title">SEO</h3>
-        <p class="servises__list-item-descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-          tempor.</p>
-      </li>
-      <li class="servises__list-item css">
-        <h3 class="servises__list-item-title">Css/Html</h3>
-        <p class="servises__list-item-descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-          tempor.</p>
-      </li>
-      <li class="servises__list-item digital">
-        <h3 class="servises__list-item-title">digital</h3>
-        <p class="servises__list-item-descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-          tempor.</p>
-      </li>
-    </ul>
-
-  </section>
-  <section class="section-team container">
-    <div class="team-title-wrapp">
-      <h2 class="title-team"><span class="subtitle-team">Who we are</span>Meet our team</h2>
-    </div>
-    <div class="team-descript-wrapper">
-      <p class="team-descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-        ut labore et dolore magna
-        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat.</p>
-    </div>
-    <div>
-      <ul class="our-dev">
-      <!-- csrd1__________________________________ -->
-      <li class="team-image">
-        <!-- overlay___________________________ -->
-        <div class="overlay">
-          <ul class="overlay-list">
-            <li class="overlay-list__item"><a href="#" class="icon-list facebook"></a><span class="visually-hidden">facebook</span></li>
-            <li class="overlay-list__item"><a href="#" class="icon-list twitter"></a><span class="visually-hidden">twitter</span></li>
-            <li class="overlay-list__item"><a href="#" class="icon-list pinterest"></a><span class="visually-hidden">pinterest</span></li>
-            <li class="overlay-list__item"><a href="#" class="icon-list instagram"></a><span class="visually-hidden">instagram</span></li>
-          </ul>
-        </div>
-        <!-- overlay___________________________ -->
-        <img src="./img/Matt.jpg" width="380" height="70" alt="Matt" class="card-dev" />
-        <p class="name-dev">Matthew Dix</p>
-        <p class="position-dev">Graphic Design</p> 
-      </li>
-
-
-      <!-- card 2++++++++++++++++++++++++++++++++++++++++++++++ -->
-      <li class="team-image">
-        <img src="./img/Cris.jpg" width="380" height="470" alt="Cris" class="card-dev" />
-          <p class="name-dev">Matthew Dix</p>
-          <p class="position-dev">Graphic Design</p>
-      </li>
-
-      <!-- card3_____________________________________________________- -->
-        <li class="team-image">
-        <img src="./img/Michael.jpg" width="380" height="470" alt="Michael" class="card-dev" />
-          <p class="name-dev">Matthew Dix</p>
-          <p class="position-dev">Graphic Design</p>
+  <main>
+    <section class="section-service container">
+      <div class="servise-title-wrapp">
+        <h2 class="title-servise"><span class="subtitle-service">We work with</span>Amazing Services</h2>
+      </div>
+      <ul class="servises__list">
+        <li class="servises__list-item photography">
+          <h3 class="servises__list-item-title">Photography</h3>
+          <p class="servises__list-item-descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod
+            tempor.</p>
+        </li>
+        <li class="servises__list-item web-design">
+          <h3 class="servises__list-item-title">Web Design</h3>
+          <p class="servises__list-item-descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod
+            tempor.</p>
+        </li>
+        <li class="servises__list-item creativity">
+          <h3 class="servises__list-item-title">Creativity</h3>
+          <p class="servises__list-item-descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod
+            tempor.</p>
+        </li>
+        <li class="servises__list-item seo">
+          <h3 class="servises__list-item-title">SEO</h3>
+          <p class="servises__list-item-descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod
+            tempor.</p>
+        </li>
+        <li class="servises__list-item css">
+          <h3 class="servises__list-item-title">Css/Html</h3>
+          <p class="servises__list-item-descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod
+            tempor.</p>
+        </li>
+        <li class="servises__list-item digital">
+          <h3 class="servises__list-item-title">digital</h3>
+          <p class="servises__list-item-descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod
+            tempor.</p>
         </li>
       </ul>
+
+    </section>
+    <section class="section-team container">
+      <div class="team-title-wrapp">
+        <h2 class="title-team"><span class="subtitle-team">Who we are</span>Meet our team</h2>
+      </div>
+      <div class="team-descript-wrapper">
+        <p class="team-descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt
+          ut labore et dolore magna
+          aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat.</p>
+      </div>
+      <div>
+        <ul class="our-dev">
+          <li class="team-image">
+            <div class="wrapper-img">
+              <div class="overlay">
+                <ul class="overlay-list">
+                  <li class="overlay-list__item"><a href="#" class="icon-list facebook"></a><span
+                      class="visually-hidden">facebook</span></li>
+                  <li class="overlay-list__item"><a href="#" class="icon-list twitter"></a><span
+                      class="visually-hidden">twitter</span></li>
+                  <li class="overlay-list__item"><a href="#" class="icon-list pinterest"></a><span
+                      class="visually-hidden">pinterest</span></li>
+                  <li class="overlay-list__item"><a href="#" class="icon-list instagram"></a><span
+                      class="visually-hidden">instagram</span></li>
+                </ul>
+              </div>
+              <img src="./img/Matt.jpg" width="380" height="70" alt="Matt" class="card-dev" />
+            </div>
+            <p class="name-dev">Matthew Dix</p>
+            <p class="position-dev">Graphic Design</p>
+          </li>
+
+
+          <!-- card 2++++++++++++++++++++++++++++++++++++++++++++++ -->
+          <li class="team-image">
+            <div class="wrapper-img">
+              <div class="overlay">
+                <ul class="overlay-list">
+                  <li class="overlay-list__item"><a href="#" class="icon-list facebook"></a><span
+                      class="visually-hidden">facebook</span></li>
+                  <li class="overlay-list__item"><a href="#" class="icon-list twitter"></a><span
+                      class="visually-hidden">twitter</span></li>
+                  <li class="overlay-list__item"><a href="#" class="icon-list pinterest"></a><span
+                      class="visually-hidden">pinterest</span></li>
+                  <li class="overlay-list__item"><a href="#" class="icon-list instagram"></a><span
+                      class="visually-hidden">instagram</span></li>
+                </ul>
+              </div>
+              <img src="./img/Cris.jpg" width="380" height="470" alt="Cris" class="card-dev" />
+            </div>
+            <p class="name-dev">Matthew Dix</p>
+            <p class="position-dev">Graphic Design</p>
+          </li>
+
+
+          <li class="team-image">
+            <div class="wrapper-img">
+              <div class="overlay">
+                <ul class="overlay-list">
+                  <li class="overlay-list__item"><a href="#" class="icon-list facebook"></a><span
+                      class="visually-hidden">facebook</span></li>
+                  <li class="overlay-list__item"><a href="#" class="icon-list twitter"></a><span
+                      class="visually-hidden">twitter</span></li>
+                  <li class="overlay-list__item"><a href="#" class="icon-list pinterest"></a><span
+                      class="visually-hidden">pinterest</span></li>
+                  <li class="overlay-list__item"><a href="#" class="icon-list instagram"></a><span
+                      class="visually-hidden">instagram</span></li>
+                </ul>
+              </div>
+              <img src="./img/Michael.jpg" width="380" height="470" alt="Michael" class="card-dev" />
+            </div>
+            <p class="name-dev">Matthew Dix</p>
+            <p class="position-dev">Graphic Design</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <hr class="line container">
+    <div class="footer container">
+      <p class="footer-text">© 2016 MoGo free PSD template by <a href="#" class="footer-link">Laaqiq</a></p>
+      <form action="#" class="contact-form">
+        <input type="email" class="contact-form__imput" placeholder="  Yor Email...">
+        <button type="submit" class="contact-form-btn">Subscribe</button>
+      </form>
     </div>
-  </section>
-  <footer></footer>
+
+  </footer>
   </div>
 </body>
 
