--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/normalize.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap" rel="stylesheet" />
@@ -27,55 +28,54 @@
   <!-- header---------------------------------------- -->
   <main>
     <section class="section-service container">
-      <div class="servise-title-wrapp">
+      <div class="servise-title-wrapper">
         <h2 class="title-servise"><span class="subtitle-service">We work with</span>Amazing Services</h2>
       </div>
       <ul class="servises__list">
         <li class="servises__list-item photography">
           <h3 class="servises__list-item-title">Photography</h3>
-          <p class="servises__list-item-descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          <p class="servises__list-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod
             tempor.</p>
         </li>
         <li class="servises__list-item web-design">
           <h3 class="servises__list-item-title">Web Design</h3>
-          <p class="servises__list-item-descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          <p class="servises__list-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod
             tempor.</p>
         </li>
         <li class="servises__list-item creativity">
           <h3 class="servises__list-item-title">Creativity</h3>
-          <p class="servises__list-item-descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          <p class="servises__list-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod
             tempor.</p>
         </li>
         <li class="servises__list-item seo">
           <h3 class="servises__list-item-title">SEO</h3>
-          <p class="servises__list-item-descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          <p class="servises__list-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod
             tempor.</p>
         </li>
         <li class="servises__list-item css">
           <h3 class="servises__list-item-title">Css/Html</h3>
-          <p class="servises__list-item-descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          <p class="servises__list-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod
             tempor.</p>
         </li>
         <li class="servises__list-item digital">
           <h3 class="servises__list-item-title">digital</h3>
-          <p class="servises__list-item-descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          <p class="servises__list-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod
             tempor.</p>
         </li>
       </ul>
-
     </section>
     <section class="section-team container">
-      <div class="team-title-wrapp">
+      <div class="team-title-wrapper">
         <h2 class="title-team"><span class="subtitle-team">Who we are</span>Meet our team</h2>
       </div>
-      <div class="team-descript-wrapper">
-        <p class="team-descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+      <div class="team-description-wrapper">
+        <p class="team-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
           incididunt
           ut labore et dolore magna
           aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -99,7 +99,7 @@
               </div>
               <img src="./img/Matt.jpg" width="380" height="70" alt="Matt" class="card-dev" />
             </div>
-            <p class="name-dev">Matthew Dix</p>
+            <h3 class="name-dev">Matthew Dix</h3>
             <p class="position-dev">Graphic Design</p>
           </li>
 
@@ -121,8 +121,8 @@
               </div>
               <img src="./img/Cris.jpg" width="380" height="470" alt="Cris" class="card-dev" />
             </div>
-            <p class="name-dev">Matthew Dix</p>
-            <p class="position-dev">Graphic Design</p>
+            <h3 class="name-dev">Christopher Campbell</h3>
+            <p class="position-dev">Branding/UX design</p>
           </li>
 
 
@@ -142,8 +142,8 @@
               </div>
               <img src="./img/Michael.jpg" width="380" height="470" alt="Michael" class="card-dev" />
             </div>
-            <p class="name-dev">Matthew Dix</p>
-            <p class="position-dev">Graphic Design</p>
+            <h3 class="name-dev">Michael Fertig</h3>
+            <p class="position-dev">Developer</p>
           </li>
         </ul>
       </div>
@@ -155,7 +155,7 @@
       <p class="footer-text">© 2016 MoGo free PSD template by <a href="#" class="footer-link">Laaqiq</a></p>
       <form action="#" class="contact-form">
         <input type="email" class="contact-form__imput" placeholder="  Yor Email...">
-        <button type="submit" class="contact-form-btn">Subscribe</button>
+        <button type="button" class="contact-form-btn">Subscribe</button>
       </form>
     </div>
 
